tenants/ai-example/trustyai-demo-guardrails/base/gateway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guardrails-gateway
spec:
  selector:
    app: guardrails-orchestrator
    component: guardrails-orchestrator
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
