tenants/ai-example/trustyai-demo-guardrails/base/gateway_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: guardrails-gateway
spec:
  to:
    kind: Service
    name: guardrails-gateway
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: ''
    destinationCACertificate: ''
  port:
    targetPort: 8090
  alternateBackends: []
